--- a/templates/category/category_detail.html
+++ b/templates/category/category_detail.html
@@ -4,16 +4,63 @@
     <h1>{{ category.title }} Details</h1>
     
     <p>{{ category.description }}</p>
-    
-    <h2>Featured Products</h2>
-    
-    <ul>
-        {% for featured_product in featured_products %}
+
+    {% if featured_products %}
+        <h2>Featured Products</h2>
+        <ul>
+            {% for featured_product in featured_products %}
+                <li>
+                    <a href="{% url 'product:product_detail' pk=featured_product.pk %}">
+                        {{ featured_product.title }} - Price: ${{ featured_product.price }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+        <div class="pagination">
+            <span class="step-links">
+                {% if featured_products.has_previous %}
+                    <a href="?page_featured=1">&laquo; first</a>
+                    <a href="?page_featured={{ featured_products.previous_page_number }}">previous</a>
+                {% endif %}
+        
+                <span class="current">
+                    Page {{ featured_products.number }} of {{ featured_products.paginator.num_pages }}.
+                </span>
+        
+                {% if featured_products.has_next %}
+                    <a href="?page_featured={{ featured_products.next_page_number }}">next</a>
+                    <a href="?page_featured={{ featured_products.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
+    {% if published_products %}
+        <h2>All Products</h2>
+        <ul>
+            {% for product in published_products %}
             <li>
-                <a href="{% url 'product:product_detail' pk=featured_product.pk %}">
-                    {{ featured_product.title }} - Price: ${{ featured_product.price }}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+                    <a href="{% url 'product:product_detail' pk=product.pk %}">
+                        {{ product.title }} - Price: ${{ product.price }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+        <div class="pagination">
+            <span class="step-links">
+                {% if published_products.has_previous %}
+                    <a href="?page_published=1">&laquo; first</a>
+                    <a href="?page_published={{ published_products.previous_page_number }}">previous</a>
+                {% endif %}
+        
+                <span class="current">
+                    Page {{ published_products.number }} of {{ published_products.paginator.num_pages }}.
+                </span>
+        
+                {% if published_products.has_next %}
+                    <a href="?page_published={{ published_products.next_page_number }}">next</a>
+                    <a href="?page_published={{ published_products.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
 {% endblock %}
