--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,9 +1,10 @@
 <div class="topnav">
     <a href="/">Home</a>
-    <a href="{% url 'cart:cart_detail' %}">Cart</a>
-    <a href="{% url 'order:order_list' %}">Orders</a>
+    <a href="{% url 'product:product_list' %}">Products</a>
     <a href="{% url 'brand:brand' %}">Brands</a>
     <a href="{% url 'category:category' %}">Categories</a>
+    <a href="{% url 'cart:cart_detail' %}">Cart</a>
+    <a href="{% url 'order:order_list' %}">Orders</a>
     {% load socialaccount %}
 
     {% if user.is_authenticated %}
