order-address-phone

--- a/templates/order/order_detail.html
+++ b/templates/order/order_detail.html
@@ -5,6 +5,9 @@
   <p><strong>Order ID:</strong> {{ order.id }}</p>
   <p><strong>Total Price:</strong> {{ order.total_price }}</p>
   <p><strong>Status:</strong> {{ order.status }}</p>
+  <p><strong>Address:</strong> {{ order.delivery_address }}</p>
+  <p><strong>Phone:</strong> {{ order.delivery_phone }}</p>
+
   <hr>
   <h2>Order Items</h2>
   <table class="table">
