--- a/templates/order/order_create.html
+++ b/templates/order/order_create.html
@@ -8,11 +8,7 @@
 
     <form method="post" action="{% url 'order:order_create' %}">
         {% csrf_token %}
-        <label for="address">Delivery Address:</label>
-        <input type="text" name="address" required>
-
-        <label for="phone">Phone Number:</label>
-        <input type="text" name="phone" required>
+        {{ form.as_p }}
 
         <button type="submit">Place Order</button>
     </form>
