--- a/templates/order/order_create.html
+++ b/templates/order/order_create.html
@@ -3,8 +3,26 @@
 
 {% block content %}
     <h1>Order Summary</h1>
-
-    <p>Total: ${{ total_price }}</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Subtotal</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for cart_item in cart_items %}
+                <tr>
+                    <td>{{ cart_item.product.title }}</td>
+                    <td>{{ cart_item.quantity }}</td>
+                    <td>${{ cart_item.subtotal }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <h3>Total: ${{ total_price }}</h3>
+    <hr>
 
     <form method="post" action="{% url 'order:order_create' %}">
         {% csrf_token %}
