--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -6,12 +6,19 @@
     <p>{{ product.description }}</p>
     <p>Price: ${{ product.price }}</p>
 
-    {% if user_authenticated %}
+    {% if user.is_authenticated %}
         <form action="{% url 'cart:add_to_cart' product_id=product.id %}" method="post">
             {% csrf_token %}
             <input type="number" name="quantity" value="1" min="1" max="{{ max_quantity }}">
             <button type="submit" {% if max_quantity <= 0 %}disabled{% endif %}>Add to Cart</button>
         </form>
+
+        {% if user_wishlist and product in user_wishlist.products.all %}
+            <a href="{% url 'wishlist:wishlist_remove' product_id=product.id %}">Remove from Wishlist</a>
+        {% else %}
+            <a href="{% url 'wishlist:wishlist_add' product_id=product.id %}">Add to Wishlist</a>
+        {% endif %}
+
     {% else %}
         <p>Please <a href="{% url 'account_login' %}">log in</a> to add items to your cart.</p>
     {% endif %}
