wishlist-move-cat-save-to-bg-firebase-upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,13 @@
                                 <input type="number" name="quantity" value="1" min="1" max="{{ featured_product.stock }}" hidden="True">
                                 <button type="submit" {% if cart_item.quantity >= featured_product.stock or featured_product.stock == 0 %}disabled{% endif %}>Add to Cart</button>
                             </form>
+                            {% if user.is_authenticated %}
+                                {% if user_wishlist and featured_product in user_wishlist.products.all %}
+                                    <a href="{% url 'wishlist:wishlist_remove' product_id=featured_product.id %}"><button>Remove from Wishlist</button></a>
+                                {% else %}
+                                    <a href="{% url 'wishlist:wishlist_add' product_id=featured_product.id %}"><button>Add to Wishlist</button></a>
+                                {% endif %}
+                            {% endif %}
                         {% endwith %}
                     {% endwith %}
                 </li>
