--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -4,6 +4,7 @@
     <a href="{% url 'brand:brand' %}">Brands</a>
     <a href="{% url 'category:category' %}">Categories</a>
     <a href="{% url 'cart:cart_detail' %}">Cart</a>
+    <a href="{% url 'wishlist:wishlist_list' %}">Wishlist</a>
     <a href="{% url 'order:order_list' %}">Orders</a>
     {% load socialaccount %}
 
